tests/fixtures/errors/invalid_preproc_unclosed_if.puml
@startuml
!if 1
A -> B: one
@enduml
